add /users for fetching all users
